Colab을 통해 생성됨

--- a/[AI_Assignment1] Data Analysis.ipynb
+++ b/[AI_Assignment1] Data Analysis.ipynb
@@ -2213,7 +2213,9 @@
         "outputId": "da84ed8f-ba8e-42f1-9a64-1dc3e63aa390"
       },
       "source": [
-        "g = sns.pairplot(selectedDataFrame, hue=\"targetvar\")\n",
+        "targetvar = 'Type'\n",
+        "g = sns.pairplot(df[['Price', 'Horsepower', 'Passengers', 'Length', 'Weight', targetvar]].dropna(),\n",
+        "                 hue=targetvar)\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -2258,7 +2260,7 @@
         "smallCar = df[df['Type']=='Small']['Passengers'].dropna()\n",
         "midsizeCar = df[df['Type']=='Midsize']['Passengers'].dropna()\n",
         "\n",
-        "stats, p = ttest_ind(smallCar, midsizeCar)\n",
+        "stats, p = ttest_ind(smallCar, midsizeCar, equal_var=False)\n",
         "print('P-value', format(p, \".19f\"))\n",
         "\n",
         "if p < siginificantLevel:\n",
@@ -3822,8 +3824,8 @@
         "enc_df = pd.DataFrame()\n",
         "\n",
         "# fill up data frame with encoded attribute using iteration\n",
-        "for col in catergorical_df.columns:\n",
-        "  enc_df[col] = enc.fit_transform(catergorical_df[col])\n",
+        "for col in categorical_df.columns:\n",
+        "  enc_df[col] = enc.fit_transform(categorical_df[col].astype(str).fillna('NA'))\n",
         "enc_df.head()"
       ],
       "execution_count": null,
